# MakeNoSense

./: Cargo.toml  README.md
glad-gl/: Cargo.toml
glad-gl/src/: gl.rs  lib.rs
tracer/: Cargo.toml
tracer/shaders/: col_shader.fs  col_shader.vs  tex_shader.fs  tex_shader.vs  ui_shader.fs  ui_shader.vs
tracer/src/: application.rs  editor.rs  graphics_context.rs  image.rs  image_processor.rs  intersector.rs  linked_node.rs  main.rs  matrix.rs  mesh.rs  shader.rs  triangulator.rs  ui_element.rs  vec.rs  vector.rs  vertex.rs  window_context.rs
tracer/src/editor/: bounded_rect.rs  image.rs  image_renderer.rs  image_selection.rs  mesh.rs  rendering_context.rs  shader.rs  shader_context.rs  ui_dropdown.rs  ui_group.rs  ui_image_editor.rs  ui_image_selection.rs  ui_layer.rs  ui_root.rs  vertex.rs
tracer/src/image_processor/: layer_image_exporter.rs  layer_json_exporter.rs  layer_renderer.rs  layer_vertex_buffer.rs  mask_builder.rs  triangle.rs
tracer/src/ui_element/: image.rs  matrix.rs  mesh.rs  shader.rs  shader_context.rs  ui_dropdown.rs  ui_group.rs  ui_image_editor.rs  ui_image_selection.rs  ui_root.rs  vertex.rs
vertex_buffer_macro_derive/: Cargo.toml
vertex_buffer_macro_derive/src/: lib.rs
